--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <!-- <link rel="icon" href="/favicon.ico"> -->
+  <link rel="icon" href="/logo_mh.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos</title>
-  </head>
+</head>
 
 <body>
   <div id="app"></div>
